src/testData/analysis/decIntegerValues.cr
#EXTRA_ATTRIBUTE: CrIntegerLiteralExpression.getValue

<warning descr="1">1_i8</warning>

<warning descr="100">1_0_0_i8</warning>

<warning descr="127">127_i8</warning>

<error descr="The value is out of Int8 range"><warning descr="">128_i8</warning></error>

<error descr="The value is out of Int8 range"><warning descr="">200_i8</warning></error>

<warning descr="-100">-100_i8</warning>

<warning descr="-100">-1_0_0_i8</warning>

<warning descr="-128">-128_i8</warning>

<error descr="The value is out of Int8 range"><warning descr="">-200_i8</warning></error>

<warning descr="1">1_u8</warning>

<warning descr="100">1_0_0_u8</warning>

<warning descr="255">255_u8</warning>

<error descr="The value is out of UInt8 range"><warning descr="">300_u8</warning></error>

<error descr="The value is out of UInt8 range"><warning descr="">-1_u8</warning></error>

<warning descr="100">100_i16</warning>

<warning descr="10000">10_000_i16</warning>

<warning descr="32767">32767_i16</warning>

<error descr="The value is out of Int16 range"><warning descr="">32768_i16</warning></error>

<error descr="The value is out of Int16 range"><warning descr="">50000_i16</warning></error>

<warning descr="-100">-100_i16</warning>

<warning descr="-10000">-10_000_i16</warning>

<warning descr="-32768">-32768_i16</warning>

<error descr="The value is out of Int16 range"><warning descr="">-50000_i16</warning></error>

<warning descr="100">100_u16</warning>

<warning descr="10000">10_000_u16</warning>

<warning descr="65535">65535_u16</warning>

<error descr="The value is out of UInt16 range"><warning descr="">70000_u16</warning></error>

<error descr="The value is out of UInt16 range"><warning descr="">-1_u16</warning></error>

<warning descr="1">1_i32</warning>

<warning descr="2147483647">2_147_483_647_i32</warning>

<warning descr="2147483647">2147483647_i32</warning>

<error descr="The value is out of Int32 range"><warning descr="">2147483648_i32</warning></error>

<error descr="The value is out of Int32 range"><warning descr="">3000000000_i32</warning></error>

<warning descr="-10000">-10_000_i32</warning>

<warning descr="-2147483648">-2147483648_i32</warning>

<error descr="The value is out of Int32 range"><warning descr="">-3000000000_i32</warning></error>

<warning descr="100">100_u32</warning>

<warning descr="10000">10_000_u32</warning>

<warning descr="4294967295">4_294_967_295_u32</warning>

<warning descr="4294967295">4294967295_u32</warning>

<error descr="The value is out of UInt32 range"><warning descr="">4294967296_u32</warning></error>

<error descr="The value is out of UInt32 range"><warning descr="">-1_u32</warning></error>

<warning descr="1">1_i64</warning>

<warning descr="9223372036854775807">9_223_372_036_854_775_807_i64</warning>

<warning descr="9223372036854775807">9223372036854775807_i64</warning>

<error descr="The value is out of Int64 range"><warning descr="">9223372036854775808_i64</warning></error>

<error descr="The value is out of Int64 range"><warning descr="">9333333333333333333_i64</warning></error>

<warning descr="-10000">-10_000_i64</warning>

<warning descr="-9223372036854775808">-9223372036854775808_i64</warning>

<error descr="The value is out of Int64 range"><warning descr="">-9333333333333333333_i64</warning></error>

<warning descr="100">100_u64</warning>

<warning descr="10000">10_000_u64</warning>

<warning descr="18446744073709551615">18_446_744_073_709_551_615_u64</warning>

<warning descr="18446744073709551615">18446744073709551615_u64</warning>

<error descr="The value is out of UInt64 range"><warning descr="">18446744073709551616_u64</warning></error>

<error descr="The value is out of UInt64 range"><warning descr="">19000000000000000000_u64</warning></error>

<error descr="The value is out of UInt64 range"><warning descr="">-1_u64</warning></error>

<warning descr="1">1_i128</warning>

<warning descr="9223372036854775807">9_223_372_036_854_775_807_i128</warning>

<warning descr="9223372036854775807">9223372036854775807_i128</warning>

<error descr="The value is out of Int128 range"><warning descr="">9223372036854775808_i128</warning></error>

<error descr="The value is out of Int128 range"><warning descr="">9333333333333333333_i128</warning></error>

<warning descr="-10000">-10_000_i128</warning>

<warning descr="-9223372036854775808">-9223372036854775808_i128</warning>

<error descr="The value is out of Int128 range"><warning descr="">-9333333333333333333_i128</warning></error>

<warning descr="100">100_u128</warning>

<warning descr="10000">10_000_u128</warning>

<warning descr="18446744073709551615">18_446_744_073_709_551_615_u128</warning>

<warning descr="18446744073709551615">18446744073709551615_u128</warning>

<error descr="The value is out of UInt128 range"><warning descr="">18446744073709551616_u128</warning></error>

<error descr="The value is out of UInt128 range"><warning descr="">19000000000000000000_u128</warning></error>

<error descr="The value is out of UInt128 range"><warning descr="">-1_u128</warning></error>